# Self-evolving-Agent

./: README.md  __init__.py  async_worker.py  core.py  kg-builder.py  kg.py  learner.py  main.py  memory.py  perception.py  pyproject.toml  requirements.txt  setup.py
concept/: api.py
data/: lvis-meta.json
eval/: eval.py  groud-truth.json  metrics.py  readme.md
run_with_sql/: database_init.sql  demo.py  frame2db.py  initdb.sql  main_last.py  test.py
script/: run.sh
